# drawio-exporter

./: .editorconfig  CHANGELOG.md  CRATES.md  Cargo.toml  Makefile  README.adoc  release.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  drawio-exporter.yml  security-audit.yml
src/drawio_exporter/: lib.rs
src/drawio_exporter/core/: mod.rs
src/drawio_exporter/core/drawio/: drawio_desktop.rs  mod.rs  mxfile.rs
src/drawio_exporter/core/explorer/: filesystem.rs  git_repository.rs  mod.rs
src/drawio_exporter/ops/: exporter.rs
src/drawio_exporter/util/: command_prelude.rs  mod.rs
tests/: cli.rs
tests/commands/: exporter.rs  exporter_links.rs  exporter_option_git_ref.rs  exporter_option_on_changes.rs  exporter_options.rs  exporter_types.rs  mod.rs
tests/data/illegal-characters/: names.drawio
tests/data/links/: links.drawio
tests/data/page_naming/: forbidden-page-name.drawio
tests/data/types/: nominal.drawio
