[package]
name = "drawio-exporter"
version = "1.0.0"
edition = "2018"
authors = ["rlespinasse <romain.lespinasse@gmail.com>"]
description = "Command Line Client To Enhance Files Export Using Draw.io Application"
readme = "CRATES.md"
license = "MIT"
documentation = "https://docs.rs/drawio-exporter"
repository = "https://github.com/rlespinasse/drawio-exporter"
keywords = ["drawio", "export", "command-line"]
categories = ["command-line-utilities"]

[lib]
name = "drawio_exporter"
path = "src/drawio_exporter/lib.rs"

[dependencies]
anyhow = "1.0"
clap = "2.33.3"
predicates = "1.0.7"
serde = "1.0.123"
serde_derive = "1.0.123"
serde-xml-rs = "0.4.1"
ignore = "0.4"
flate2 = "1.0"
base64 = "0.13.0"
urlencoding = "1.1.1"
regex = "1.4.3"
git2 = "0.13"
relative-path = "1.3.2"
shiplift = "0.7.0"

[dev-dependencies]
assert_cmd = "1.0.2"
tempfile = "3.1.0"
fs_extra = "1.2.0"
filetime = "0.2.14"
