[package]
name = "drawio-exporter"
version = "1.2.0"
edition = "2018"
authors = ["rlespinasse <romain.lespinasse@gmail.com>"]
description = "Command Line Client To Enhance Files Export Using Draw.io Application"
readme = "CRATES.md"
license = "MIT"
documentation = "https://docs.rs/drawio-exporter"
repository = "https://github.com/rlespinasse/drawio-exporter"
keywords = ["drawio", "export", "command-line"]
categories = ["command-line-utilities"]

[lib]
name = "drawio_exporter"
path = "src/drawio_exporter/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.14", features = ["cargo"] }
predicates = "2.1.1"
serde = { version = "1.0.123", features = ["derive"] }
serde_derive = "1.0.123"
serde-xml-rs = "0.6.0"
ignore = "0.4"
flate2 = "1.0"
base64 = "0.13.0"
urlencoding = "2.1.2"
regex = "1.5.5"
git2 = "0.15.0"
relative-path = "1.3.2"

[dev-dependencies]
assert_cmd = "2.0.4"
tempfile = "3.1.0"
fs_extra = "1.2.0"
filetime = "0.2.14"
