[package]
name = "drawio-exporter"
version = "1.2.0"
edition = "2021"
authors = ["rlespinasse <romain.lespinasse@gmail.com>"]
description = "Command Line Client To Enhance Files Export Using Draw.io Application"
readme = "CRATES.md"
license = "MIT"
documentation = "https://docs.rs/drawio-exporter"
repository = "https://github.com/rlespinasse/drawio-exporter"
keywords = ["drawio", "export", "command-line"]
categories = ["command-line-utilities"]

[lib]
name = "drawio_exporter"
path = "src/drawio_exporter/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["cargo"] }
predicates = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde-xml-rs = "0.6"
ignore = "0.4"
flate2 = "1.0"
base64 = "0.21"
urlencoding = "2.1"
regex = "1.10"
git2 = "0.18"
relative-path = "1.9"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.9"
fs_extra = "1.3"
filetime = "0.2"
